@@ -1,3 +1,12 @@
+2011-04-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/48343
+	* combine.c (combine_instructions): Add last_combined_insn,
+	update it if insn is after it, pass it to all try_combine
+	calls.
+	(try_combine): Add last_combined_insn parameter, pass it instead of
+	i3 to propagate_for_debug.
+
 2011-04-07  Andrey Belevantsev  <abel@ispras.ru>
 
 	Backport from mainline
